<resources>
    <string name="app_name">AssignmentSix</string>
    <string name="title_home">My Daily Habits</string>
    <string name="home">Home</string>
    <string name="add_habit">Add Habit</string>
    <string name="my_habits">My Habits</string>
    <string name="btn_add_habit">Add Habit</string>
    <string name="btn_view_habits">View Habits</string>
    <string name="add_new_habit">Add New Habit</string>
    <string name="enter_habit_name_e_g_drink_water">Enter habit name (e.g., Drink Water)</string>
    <string name="save_habit">Save Habit</string>
    <string name="habit_name">Habit Name</string>
    <string name="streak_0">Streak: 0</string>
</resources>