<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/main_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:orientation="vertical">

    <include layout="@layout/common_toolbar" />

    <LinearLayout
        android:id="@+id/screen_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:padding="32dp">

    <TextView
        android:id="@+id/home_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="64dp"
        android:layout_marginBottom="64dp"
        android:text="@string/title_home"
        android:textColor="@color/black"
        android:textSize="28sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/btn_add_habit"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginBottom="24dp"
        android:background="@drawable/bg_button"
        android:text="@string/btn_add_habit"
        android:textAllCaps="false"
        android:textColor="@color/button_text"
        android:textSize="18sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/btn_view_habits"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="@drawable/bg_button"
        android:text="@string/btn_view_habits"
        android:textAllCaps="false"
        android:textColor="@color/button_text"
        android:textSize="18sp"
        android:textStyle="bold" />

    </LinearLayout>
</LinearLayout>
